# delivery/handlers.go
@@ -97,34 +97,55 @@ func (handlers *Handlers) GetUser(w http.ResponseWriter, r *http.Request) {
 	WriteResponse(w, body, http.StatusOK)
 }
 
-//func (handlers *Handlers) UpdateUser(w http.ResponseWriter, r *http.Request) {
-//	var userUpd models.UpdateUserFields
-//	var e *models.Error
-//
-//	defer r.Body.Close()
-//	body, _ := ioutil.ReadAll(r.Body)
-//
-//	fmt.Println(string(body))
-//	vars := mux.Vars(r)
-//	nickname := vars["nickname"]
-//
-//	err := json.Unmarshal(body, &userUpd)
-//	if err != nil {
-//		http.Error(w, err.Error(), http.StatusInternalServerError)
-//		return
-//	}
-//
-//	user, e := handlers.usecases.ChangeUser(&userUpd, nickname)
-//	if e != nil {
-//		body, _ = json.Marshal(e)
-//		WriteResponse(w, body, e.Code)
-//		return
-//	}
-//
-//	body, _ = json.Marshal(user)
-//
-//	WriteResponse(w, body, http.StatusOK)
-//}
+func (handlers *Handlers) UpdateUser(w http.ResponseWriter, r *http.Request) {
+	var user models.User
+
+	defer r.Body.Close()
+	body, _ := ioutil.ReadAll(r.Body)
+
+	fmt.Println(string(body))
+	vars := mux.Vars(r)
+	username := vars["username"]
+
+	err := json.Unmarshal(body, &user)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	user.UserName = username
+
+	users, e := handlers.usecases.UpdateUser(&user)
+	if e != nil {
+		body, _ = json.Marshal(e)
+		WriteResponse(w, body, e.Code)
+		return
+	}
+	if len(users) > 1 {
+		body, _ = json.Marshal(users)
+		WriteResponse(w, body, http.StatusConflict)
+		return
+	}
+	body, err = json.Marshal(user)
+	//http.Error(w, err.Error(), http.StatusInternalServerError)
+
+	WriteResponse(w, body, http.StatusOK)
+}
+
+func (handlers *Handlers) DeleteUser(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	username := vars["username"]
+
+	user, err := handlers.usecases.DeleteUserByUsername(username)
+	if err != nil {
+		body, _ := json.Marshal(err)
+		WriteResponse(w, body, err.Code)
+		return
+	}
+
+	body, _ := json.Marshal(user)
+
+	WriteResponse(w, body, http.StatusOK)
+}
 
 func (handlers *Handlers) CreateTask(w http.ResponseWriter, r *http.Request) {
 	var task models.Task
@@ -164,6 +185,55 @@ func (handlers *Handlers) GetTask(w http.ResponseWriter, r *http.Request) {
 	taskname := vars["taskname"]
 
 	task, err := handlers.usecases.GetTaskByTaskname(taskname)
+	if err != nil {
+		body, _ := json.Marshal(err)
+		WriteResponse(w, body, err.Code)
+		return
+	}
+
+	body, _ := json.Marshal(task)
+
+	WriteResponse(w, body, http.StatusOK)
+}
+
+func (handlers *Handlers) UpdateTask(w http.ResponseWriter, r *http.Request) {
+	var task models.Task
+
+	defer r.Body.Close()
+	body, _ := ioutil.ReadAll(r.Body)
+
+	fmt.Println(string(body))
+	vars := mux.Vars(r)
+	taskname := vars["taskname"]
+
+	err := json.Unmarshal(body, &task)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	task.TaskName = taskname
+
+	tasks, e := handlers.usecases.UpdateTask(&task)
+	if e != nil {
+		body, _ = json.Marshal(e)
+		WriteResponse(w, body, e.Code)
+		return
+	}
+	if len(tasks) > 1 {
+		body, _ = json.Marshal(tasks)
+		WriteResponse(w, body, http.StatusConflict)
+		return
+	}
+	body, err = json.Marshal(task)
+
+	WriteResponse(w, body, http.StatusOK)
+}
+
+func (handlers *Handlers) DeleteTask(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	taskname := vars["taskname"]
+
+	task, err := handlers.usecases.DeleteTaskByTaskname(taskname)
 	if err != nil {
 		body, _ := json.Marshal(err)
 		WriteResponse(w, body, err.Code)
